# Written using following tutorial:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lasvegas"
version = "0.1.1"
authors = [
  { name="Élie Goudout", email="eliegoudout@hotmail.com" },
]
description = "Las Vegas boardgame – API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/eliegoudout/lasvegas"
"Bug Tracker" = "https://github.com/eliegoudout/lasvegas/issues"
