# References for help:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# https://peps.python.org/pep-0621/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "lasvegas/__init__.py"

[project]
name = "lasvegas"
dynamic = ["version"]
description = "Las Vegas boardgame – API"
readme = "README.md"
authors = [{name="Élie Goudout", email="eliegoudout@hotmail.com"}]
requires-python = "~=3.10"  # PEP440 != poetry? '^' vs '~'
license = {file="LICENSE"}
dependencies = [
  "numpy ~= 1.22",
  "tabulate ~= 0.9",
  "tqdm ~= 4.63",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
# Home-page bug, see https://github.com/pypa/pip/issues/11221
"Homepage" = "https://github.com/eliegoudout/lasvegas"
"Bug Tracker" = "https://github.com/eliegoudout/lasvegas/issues"
